# stellarecord

./: .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  AGENT.md  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  fix-task.md  index.html  manual.html  package-lock.json  package.json  rust-toolchain.toml
.claude/: README.md  manual.html
.github/workflows/: ci.yml
docs/: basic-design.html  database.md  manual.html  spec.md  tech-stack.md
src/: App.css  App.dark.css  App.light.css  App.midnight.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs  platform.rs  utils.rs
src-tauri/src/analyze/: db.rs  mod.rs  parser.rs
src-tauri/src/commands/: archive.rs  database.rs  import.rs  mod.rs  polaris.rs  registry.rs  settings.rs
src-tauri/windows/: hooks.nsi  installer.nsi
src/app/: App.module.css  App.tsx  CreditModal.module.css  CreditModal.tsx  ToastContainer.tsx  section.test.ts  section.ts  useAppModals.ts
src/features/analyze/models/: types.ts
src/features/analyze/services/: analyzeService.ts
src/features/analyze/viewmodels/: useAnalyzeState.ts
src/features/analyze/views/: AnalyzeSection.module.css  AnalyzeSection.tsx  PolarisCleanupModal.module.css  PolarisCleanupModal.tsx
src/features/archive/models/: archiveFormat.test.ts  archiveFormat.ts  logFormat.tsx  types.ts
src/features/archive/services/: archiveService.ts
src/features/archive/viewmodels/: useArchiveSelection.ts  useArchiveState.ts
src/features/archive/views/: ArchiveSelectorModal.module.css  ArchiveSelectorModal.tsx  LogViewerModal.module.css  LogViewerModal.tsx
src/features/database/models/: types.ts
src/features/database/services/: databaseService.ts
src/features/database/viewmodels/: useDatabaseState.ts
src/features/database/views/: DatabaseSection.module.css  DatabaseSection.tsx
src/features/registry/models/: types.ts
src/features/registry/services/: registryService.ts
src/features/registry/viewmodels/: useRegistryState.ts
src/features/registry/views/: RegisterAppModal.tsx  RegistryIcons.tsx  RegistrySection.module.css  RegistrySection.tsx
src/features/settings/models/: theme.test.ts  theme.ts  types.ts
src/features/settings/services/: settingsService.ts
src/features/settings/viewmodels/: useSettingsState.ts
src/features/settings/views/: SettingsControls.module.css  SettingsControls.tsx
src/shared/components/: Icons.tsx
src/shared/hooks/: useToasts.ts
src/shared/lib/: byteFormat.ts  errors.ts  storageFormat.test.ts  storageFormat.ts
src/shared/models/: types.ts
src/shared/styles/: shared.module.css
