[package]
name = "stella_record_ui"
version = "1.0.0"
description = "StellaRecord"
authors = ["CosmoArtsStore"]
edition = "2021"

[[bin]]
name = "Stellarecord"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
base64 = "0.22"
tar = "0.4"
zstd = "0.13"
winreg = "0.52"
opener = { workspace = true }
